# SuperBomberTek

./: .gitignore  CMakeLists.txt  Makefile  README.md  oui.cpp
bonus/editor/: .gitignore  CMakeLists.txt  Makefile
bonus/editor/include/: BrushButton.hpp  Map.hpp  ModalSave.hpp  ThemeButton.hpp
bonus/editor/src/: BrushButton.cpp  Editor.cpp  Hud.cpp  Map.cpp  ModalSave.cpp  SaveButton.cpp  ThemeButton.cpp  ThemeVizualizer.cpp  main.cpp
bootstrap/cross_platform/: CMakeLists.txt
doc/: Doxyfile  welcome.md
editor/: Makefile
editor/include/: BrushButton.hpp  Editor.hpp  Hud.hpp  Map.hpp  ModalSave.hpp  SaveButton.hpp  ThemeButton.hpp  ThemeVisualizer.hpp  enums.hpp
editor/src/: BrushButton.cpp  Editor.cpp  Hud.cpp  Map.cpp  ModalSave.cpp  SaveButton.cpp  ThemeButton.Cpp  ThemeButton.cpp  ThemeVizualizer.cpp
font/: myfont.xml
include/: AComponent.hpp  Button.hpp  CSVParser.hpp  ComponentContainer.hpp  Components.h  ContextManager.hpp  EndGameInfo.hpp  Entity.hpp  EntityBuilder.h  EntityManager.hpp  EventHandler.hpp  Exceptions.h  FileParser.hpp  GameEngine.hpp  GameInfos.hpp  IComponentContainer.hpp  IEntity.hpp  IScene.hpp  ISystem.hpp  InitGame.hpp  MapGenerator.hpp  MasterInfo.hpp  MusicManager.hpp  Parallax.hpp  PlayerMaps.hpp  PlayerSkins.hpp  PositionComponent.hpp  PositionSystem.hpp  RenderComponent.hpp  RenderSystem.hpp  SaveManager.hpp  SceneManager.hpp  Scenes.h  ServiceLocator.hpp  Systems.h  TypeIndex.hpp
include/Power-Ups/: BombUpComponent.hpp  KickBombComponent.hpp  PowerComponent.hpp  WallPassComponent.hpp
include/Scenes/: GameScene.hpp  MenuScene.hpp  TitleScene.hpp
include/UI/: UiSelector.hpp
include/components/: AIComponent.hpp  BombComponent.hpp  GameComponent.hpp  HitboxComponent.hpp  IComponent.hpp  InputComponent.hpp  KillComponent.hpp  MapComponent.hpp  MeshComponent.hpp  MoveComponent.hpp  PathFinderComponent.hpp  PlayerComponent.hpp  PositionComponent.hpp  PowerDownComponent.hpp  PowerUpComponent.hpp  RenderComponent.hpp  RotationComponent.hpp  ShakeComponent.hpp  TimerComponent.hpp  VelocityComponent.hpp  WallComponent.hpp
include/entity/: Entity.hpp  EntityBuilder.hpp  EntityManager.hpp
include/exceptions/: AnimationException.hpp  CameraNotFoundException.hpp  DeviceException.hpp  FileCorruptedException.hpp  FileNotFoundException.hpp  GameEngineException.hpp  IndieException.hpp  InvalidIndexException.hpp  MusicManagerException.hpp  SceneManagerException.hpp  SceneNotFoundException.hpp  SoundNotFoundException.hpp
include/music/: Music.hpp  MusicManager.hpp
include/objectContainer/: IObjectContainer.hpp  ObjectContainer.hpp
include/scenes/: CreditScene.hpp  (+18 more)
ressources/: image_paths.txt  untitled_walk.b3d
src/: AComponent.cpp  CSVParser.cpp  ContextManager.cpp  EntityBuilder.cpp  EventHandler.cpp  FileParser.cpp  GameEngine.cpp  GameInfos.cpp  GameScene.cpp  ImageLoader.cpp  MapGenerator.cpp  MasterInfo.cpp  MenuScene.cpp  MusicManager.cpp  Parallax.cpp  PlayerMaps.cpp  PlayerSkins.cpp  PositionComponent.cpp  PositionSystem.cpp  RenderComponent.cpp  RenderSystem.cpp  SaveManager.cpp  SceneManager.cpp  ServiceLocator.cpp  TitleScene.cpp  UiSelector.cpp  main.c  main.cpp  test.cpp
tests/: Makefile  test_pattern.c
(+192 files in other folders)
